# fla_description

./: CMakeLists.txt  README.md  package.xml
config/: square.mission
config/sitl/: matrice_100
launch/: sim.launch  stadium.launch
models/c920/: .gitignore  c920.sdf.jinja
models/fern/: model.config  model.sdf
models/fern/meshes/: fern.dae
models/forest/: forest.sdf  forest.sdf.py  model.config
models/ivy/: model.config  model.sdf
models/ivy/meshes/: ivy.dae
models/matrice_100/: .gitignore  matrice_100.sdf.jinja
models/matrice_100/meshes/: box.blend  box.dae
models/px4flow/: .gitignore  field of view calc.ipynb  px4flow.sdf.jinja
models/px4flow/.ipynb_checkpoints/: field of view calc-checkpoint.ipynb
models/sf10a/: model.sdf  sf10a.sdf  sf10a.sdf.jinja
models/stadium/: material  material.jinja  model  model.config  model.jinja  stadium.sdf.py
models/stadium/materials/scripts/: grass.material  yard_10.material  yard_15.material  yard_20.material  yard_25.material  yard_30.material  yard_35.material  yard_40.material  yard_45.material  yard_50.material  yard_55.material
models/stadium/meshes/: floor.blend  floor.dae
models/tarot-t4-3d-gimbal/: model.config  tarot-t4-3d-gimbal.sdf  tarot-t4-3d-gimbal.sdf.jinja
models/tree_maple/: model.config  model.sdf
models/tree_maple/meshes/: tree_maple.dae
models/tree_oak/: model.config  model.sdf
models/tree_oak/meshes/: tree_oak.dae
models/tree_pine/: model.config  model.sdf
models/tree_pine/meshes/: tree_pine.dae
scripts/: .gitignore  jinja_gen.py
worlds/: forest.world  stadium.world
